<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_300"
    tools:context=".views.SplashScreenActivity">


    <TextView
        style="@style/ButtonFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:text="@string/sign_in_as_a_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:padding="20dp"
        android:src="@mipmap/ic_decoration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSplashScreen"
        style="@style/BoldFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="18dp"
        android:padding="18dp"
        android:text="@string/happy_birthday"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:padding="10dp"
        android:paddingEnd="5dp"
        style="@style/RegularFont"
        android:text="@string/hello"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivSplashScreen" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        style="@style/ButtonFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rectangular_greyed"
        android:backgroundTint="@android:color/transparent"
        android:padding="10dp"
        android:paddingStart="@dimen/button_side_padding"
        android:paddingEnd="@dimen/button_side_padding"
        android:text="Sign In"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/materialButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/ButtonFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rectangular_transparent"
        android:backgroundTint="@android:color/transparent"
        android:padding="10dp"
        android:paddingStart="@dimen/button_side_padding"
        android:paddingEnd="@dimen/button_side_padding"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="@color/grey_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>