<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_900"
    tools:context=".views.WelcomeScreenActivity">


    <TextView
        style="@style/ButtonFontRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:text="@string/sign_in_as_a_guest"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/flSplashScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:scaleY="1.3"
            android:src="@mipmap/ic_flower" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/splash_screen_gradient" />


    </FrameLayout>


    <TextView
        android:id="@+id/intro_text"
        style="@style/ButtonFontRegular"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:padding="10dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="90dp"
        android:text="@string/hello"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSplashScreen" />

    <TextView
        android:id="@+id/tvSplashScreen"
        style="@style/HeaderFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="18dp"
        android:padding="18dp"
        android:text="@string/happy_birthday"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        style="@style/ButtonFontBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rectangular_greyed"
        android:backgroundTint="@android:color/transparent"
        android:padding="10dp"
        android:paddingStart="@dimen/button_side_padding"
        android:paddingEnd="@dimen/button_side_padding"
        android:text="Sign In"
        android:textAllCaps="false"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        style="@style/ButtonFontBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rectangular_transparent"
        android:backgroundTint="@android:color/transparent"
        android:padding="10dp"
        android:paddingStart="@dimen/button_side_padding"
        android:paddingEnd="@dimen/button_side_padding"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:elevation="5dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSignIn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>